# DatBot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  config.example.toml  config.md  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml  schema.json
.github/workflows/: build-docker copy.yaml  docker-build.yaml
src/: main.py
src/cogs/: curseforge_cog.py  dev_cog.py  example_disabled.py  http_cog.py  lavalink_cog.py  math_cog.py  mimic3_cog.py  minecraft_cog.py  mod_cog.py  music_cog.py  piston_cog.py  qr_cog.py  snekbox_cog.py  someone_cog.py  task_disabled.py  user_cog.py
src/data/: math.py  mcserver.py  qrcode.py
src/helper/: __init__.py  cache.py  cbot.py  ccog.py  convar.py  csettings.py  ctypes.py  emojis.py  errors.py  injection.py  mimic3.py  misc.py  models.py  patch.py  piston.py  rcon.py  settings.py  views.py
src/helper/docker/: __init__.py  api.py  models.py
