[tool.poetry]
name = "datbot"
version = "0.2.1"
description = "Another generic multi purpose discord bot"
authors = ["Stinky-c <60587749+Stinky-c@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
disnake = "2.8.*"
python-dotenv = "^0.21.0"
qrcode = {extras = ["pil"], version = "^7.4.2"}
yt-dlp = "^2022.10.4"
pynacl = "^1.5.0"
psutil = "^5.9.4"
beanie = "^1.15.4"
wavelink = {git = "https://github.com/Stinky-c/Wavelink.git"}
aiodns = "^3.0.0"
orjson = "^3.8.3"
curse-api = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = { version = "^22.10.0", allow-prereleases = true }
poethepoet = "^0.18.1"
mypy = "^1.0.0"

[tool.mypy]
python_version = "3.11"


[tool.poetry.group.types.dependencies]
types-toml = "^0.10.8.3"

[tool.poe.tasks]
dev-run = "docker-compose -f docker-compose-dev.yaml up"
dev-build = "docker-compose -f docker-compose-dev.yaml up --build"

[tool.poe.tasks.schema]
script = "src.helper.settings:schema_json"
print_result = true


[tool.ruff]
extend-ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
