[tool.poetry]
name = "datbot"
version = "0.5.0"
description = "Another generic multi purpose discord bot"
authors = ["Stinky-c <60587749+Stinky-c@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
disnake = "^2.8.1"
python-dotenv = "^1.0.0"
qrcode = { extras = ["pil"], version = "^7.4.2" }
pynacl = "^1.5.0"
psutil = "^5.9.4"
beanie = "^1.18.0"
aiodns = "^3.0.0"
orjson = "^3.8.7"
curse-api = "^3.1.1"
mafic = "^2.0.1"


[tool.poetry.group.dev.dependencies]
black = { version = "^22.10.0", allow-prereleases = true }
poethepoet = "^0.19.0"
mypy = "^1.2.0"
ruff = "^0.0.260"

[tool.mypy]
python_version = "3.11"


[tool.poe.tasks]
dev-run = "docker-compose -f docker-compose-dev.yaml up"
dev-build = "docker-compose -f docker-compose-dev.yaml up --build"

[tool.poe.tasks.schema]
script = "src.helper.settings:schema_json"
print_result = true


[tool.ruff]
extend-ignore = ["E501"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
