[tool.poetry]
name = "datbot"
version = "1.1.0"
description = "Another generic multi purpose discord bot"
authors = ["Stinky-c <60587749+Stinky-c@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.11"
disnake = "^2.9.0"
python-dotenv = "^1.0.0"
qrcode = { extras = ["pil"], version = "^7.4.2" }
pynacl = "^1.5.0"
psutil = "^5.9.5"
beanie = "^1.20.0"
aiodns = "^3.0.0"
orjson = "^3.9.2"
curse-api = "^3.1.1"
mafic = "^2.9.2"
disnake-ext-plugins = { git = "https://github.com/DisnakeCommunity/disnake-ext-plugins.git", rev = "36fe244fedd1253bcfcad1ebb1d69501a17f5961" }
aiodocker = "^0.21.0"
thefuzz = { extras = ["speedup"], version = "^0.19.0" }


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
poethepoet = "^0.24.3"
mypy = "^1.5.1"
ruff = "^0.0.285"
pre-commit = "^3.3.3"

[tool.mypy]
python_version = "3.11"


[tool.poe.tasks]
dev-run = "docker-compose -f docker-compose-dev.yaml up"
dev-build = "docker-compose -f docker-compose-dev.yaml up --build"


[tool.ruff]
extend-ignore = ["E501"]
extend-select = ["F", "E", "W", "I"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]
